--- a/assets/style/stylesheet.css
+++ b/assets/style/stylesheet.css
@@ -1,3 +1,15 @@
+@font-face{
+ font-family: 'AinslieW01-NormRegular';
+ src: url('Ainslie-W01-Norm-Regular-V2.TTO');
+ 
+
+}
+
+@font-face {
+    font-family: 'AinslieW01-NormBold';
+    src: url('Ainslie-W01-Norm-Bold-V1.TTF');
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -7,6 +19,8 @@
 }
 body {
     width: 100%;
+
+    font-family: 'AinslieW01-NormRegular';
 
     background: #FFFFFF;
 }
@@ -29,58 +43,54 @@ header {
     z-index: 1000;
 }
 
-.box {
-    width: 45px;
-    height: 45px;
-    background-color: #1976D2;
-    border-radius: 7px;
-    transform: rotate(45deg);
-}
 
 .logo {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     align-items: center;
-
+    
     position: relative;
     left: 40px;
+    width: 25%;
     
     /* border: 1px solid #181818; */
     /* background-color: blue; */
 }
 
+.home-logo {
+    width: 90px;
 
+    cursor: pointer;
+    
+}
 
 .logo h1 {
 
-    font-family: serif;
+    padding-left: 7px;
+
+    font-family: 'AinslieW01-NormRegular';
     font-style: normal;
     font-weight: 500;
     font-size: 64px;
     line-height: 79px;
     letter-spacing: 1px;
-    
     color: #1E88E5;
-
+    
     mix-blend-mode: multiply;
     cursor: pointer;
 }
 
-h2 {
-    position: relative;
-    left: -36px;
-    bottom: 1px;
-    
-    font-family: serif;
-    font-style: normal;
-    font-size: 45px;
-    font-weight: 500;
-    color: #FFFFFF;
+.logo a{
+    text-decoration: none;
+}
+
+.logo:active{
+    color: #1E88E5;
 }
 
 nav {
     
-    /* border: 1px solid #181818; */
+    border: 1px solid #181818;
 }
 
 nav li {
@@ -123,36 +133,56 @@ nav a:hover {
 
 main {
     width: 100%;
+    
+}
+
+article {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    width: 100%;
+    height: 80vh;
+    /* padding-top: 20px; */
+
+    /* border: 1px solid #000000; */
+}
+
+.container-home {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    border: 1px solid #000000;
 }
 
 .caption {
-    /* width: 25%; */
-    /* margin-left: 100px ; */
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    
+    width: 533px;
+    height: 296px;
 
     padding-left: 50px;
     padding-right: 50px;
     padding-bottom: 10px;
     padding-top: 10px;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    width: 533px;
-    height: 296px;
-
+    
     position: relative;
     left: 90px;
     top: 100px;
     z-index: 1;
-    /* background-color: #64B5F6; */
+
     /* border: 1px solid #000000; */
+    border-radius: 38px;
 
     background: rgba(255, 255, 255, 0.75);
 
-    border-radius: 38px;
 }
 
 .caption h1 {
-    font-family: serif;
+    font-family: 'AinslieW01-NormBold';
     font-style: normal;
     font-weight: 900;
     font-size: 40px;
@@ -176,6 +206,15 @@ main {
     color: #1E88E5;
 }
 
+.pendaftaran {
+    position: relative;
+    top: 70px;
+    left: 150px;
+    text-align: center;
+
+    border: 1px solid #000000;
+}
+
 .button-daftar {
     width: 173px;
     height: 42px;
@@ -187,20 +226,13 @@ main {
     border: none;
 
     margin-top: 30px;
-    
+
 }
 
 .button-daftar:hover {
     transition: 0.3s;
     background-color: #1976D2;
 } 
-
-.pendaftaran {
-    position: relative;
-    top: 70px;
-    left: 150px;
-    text-align: center;
-}
 
 .pendaftaran p{
     color: #000000;
@@ -209,6 +241,8 @@ main {
     font-size: 16px;
     font-weight: 800;
     margin-top: 20px;
+
+    border: 1px solid #000000;
 }
 
 .featured-img{
@@ -223,25 +257,95 @@ main {
 
 }
 
-article {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-
-    width: 100%;
-    /* padding-top: 20px; */
-
-    /* border: 1px solid #000000; */
-}
-.container-home {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    /* height: 1024vh; */
-    /* border: 1px solid #000000; */
-}
-
 figure {
     /* border: 1px solid #000000; */
 }
+
+
+/* Tentang-Kami */
+.container-tentang-kami{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+.container-elipse {
+    width: 10%;
+    /* height: 20vh; */
+
+    display: flex;
+    flex-wrap: wrap;
+    
+    position: absolute;
+    /* top: 100px; */
+    /* left: 120px; */
+    border: 1px solid #000000;
+}
+.elipse {
+    width: 80px;
+    height: 80px;
+
+    border-radius: 100%;
+}
+
+.biru-pudar {
+    position: absolute;
+    top: 25px;
+    left: -20px;
+    background: #E3F2FD;
+    z-index: 2;
+
+}
+
+.biru-terang {
+    position: absolute;
+    top: 50px;
+    left: 20px;
+    background: #1976D2;
+    z-index: 1;
+}
+.biru-transparant {
+    position: absolute;
+    left: 25px;
+    background: #90CAF9;
+
+}
+
+.caption-tentang-kami{
+    border: 1px solid #000000;
+}
+
+.judul-caption{
+    width: 40%;
+    padding: 10px;
+    
+    text-align: center;
+    border-radius: 87.5px;
+    background: #1E88E5;
+    border: 1px solid #000000;
+}
+
+.caption-tentang-kami h1{
+    font-family: 'AinslieW01-NormBold';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 64px;
+    line-height: 87px;
+    color: #ffffff;
+}
+
+.content-caption{
+    width: 40%;
+
+    border: 1px solid #000000;
+}
+
+.featured-img-tentang-kami{
+    width: 493px;
+    height: 358;
+
+    border-radius: 311px;
+}
+
+/* Jenis Layanan */
